--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,16 @@
 			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
 			<version>5.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<finalName>modulo3</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
