--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 spring.application.name=modulo3
-spring.cloud.stream.kafka.binder.brokers=localhost:29092
+spring.jpa.hibernate.ddl-auto=update
+spring.cloud.stream.kafka.binder.brokers=controller-1:19092
 spring.cloud.stream.kafka.binder.auto-create-topics=true
-spring.cloud.function.definition=pedido
+# Define topicos de entrada para as funcoes
+spring.cloud.function.definition=pedido;cancelamento
+spring.cloud.stream.bindings.pedido-in-0.destination=pedido
+spring.cloud.stream.bindings.cancelamento-in-0.destination=cancelamento
+# Define os topicos de saida das funcoes
+spring.cloud.stream.output-bindings=pedido-topic;cancelar-topic
+spring.cloud.stream.bindings.pedido-topic.destination=pedido
+spring.cloud.stream.bindings.cancelar-topic.destination=cancelamento
+# Banco de dados
+spring.datasource.url=jdbc:mysql://mysql/mydb
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.pool-size=30
