--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,10 @@
 services:
-
   modulo3:
     build: .
     ports:
       - 8080:8080
     depends_on:
-      - controller-3
+      - controller-3fffff
       - mysql
       - graylog
 
